--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -1,3 +1,38 @@
 
 poseidon.auto=true
+#spring.profiles.active=
+poseidon.ignore-path=/**
 
+
+mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
+mybatis-plus.type-aliases-package=com.muggle.common
+mybatis-plus.global-config.id-type=0
+mybatis-plus.global-config.field-strategy=2
+mybatis-plus.global-config.capital-mode=true
+mybatis-plus.global-config.refresh-mapper=true
+logging.level.com.alibaba.nacos.client.naming=warn
+
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=1
+spring.datasource.minIdle=3
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=30000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat,slf4j
+#spring.datasource.useGlobalDataSourceStat: true
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+
+spring.datasource.url=jdbc:mysql://49.233.148.110:3306/poseidon?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=poseidon_test
+spring.datasource.password=message@AA11
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.platform=mysql
