webflux 配置mybatis-plus

--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -71,20 +71,10 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
         <dependency>
@@ -100,11 +90,12 @@
         <dependency>
             <groupId>com.muggle</groupId>
             <artifactId>poseidon-boot-starter</artifactId>
-            <version>0.0.1-webflux.Alpha</version>
-
+            <version>0.0.1.Beta</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 
