webflux 配置mybatis-plus

--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -31,8 +31,8 @@ spring.datasource.filters=stat,slf4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 
-spring.datasource.url=jdbc:mysql://49.233.148.110:3306/poseidon?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=poseidon_test
-spring.datasource.password=message@AA11
+spring.datasource.url=jdbc:mysql:///p_oa?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.platform=mysql
