webflux 配置mybatis-plus

--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -36,3 +36,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.platform=mysql
+
+logging.config=classpath:poseidon-logback.xml
