webflux 配置mybatis-plus

--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #poseidon.auto=true
-#spring.profiles.active=
+spring.profiles.active=local
 poseidon.ignore-path=/**
 
 
@@ -31,10 +31,6 @@ spring.datasource.filters=stat,slf4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
 
-spring.datasource.url=jdbc:mysql:///p_oa?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.platform=mysql
-
 logging.config=classpath:poseidon-logback.xml
+
+poseidon.auto=true
