webflux 配置mybatis-plus

--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -107,6 +107,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.0.3</version>
+        </dependency>
     </dependencies>
 
 
