--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -108,11 +108,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>5.0.3</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
