--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -33,5 +33,7 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 
 logging.config=classpath:poseidon-logback.xml
 
+spring.mvc.view.suffix=.html
+
 poseidon.auto=true
 log.dir=logs
