--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -34,8 +34,8 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 logging.config=classpath:poseidon-logback.xml
 
 #spring.mvc.view.suffix=.html
-spring.mvc.view.prefix=views
+#spring.mvc.view.prefix=views
 
 poseidon.auto=true
 log.dir=logs
-logging.level.root=debug
+#logging.level.root=debug
