--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #poseidon.auto=true
 spring.profiles.active=local
 #poseidon.ignore-path=/**
-poseidon.ignore-path=/layuiadmin/**
+poseidon.ignore-path=/pear/**
 
 mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
 mybatis-plus.type-aliases-package=com.muggle.common
@@ -34,8 +34,8 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 logging.config=classpath:poseidon-logback.xml
 
 #spring.mvc.view.suffix=.html
-spring.mvc.view.prefix=views/
+spring.mvc.view.prefix=pear/
 
 poseidon.auto=true
 log.dir=logs
-#logging.level.root=debug
+logging.level.root=debug
