--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #poseidon.auto=true
 spring.profiles.active=local
-#poseidon.ignore-path=/**
-poseidon.ignore-path=/pear/**
+poseidon.ignore-path=/**
+#poseidon.ignore-path=/pear/**
 
 mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
 mybatis-plus.type-aliases-package=com.muggle.common
@@ -38,4 +38,4 @@ spring.mvc.view.prefix=pear/
 
 poseidon.auto=true
 log.dir=logs
-logging.level.root=debug
+logging.level.root=info
