lay-ui 框架集成 登录完善

--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -38,4 +38,7 @@ spring.mvc.view.prefix=pear/
 
 poseidon.auto=true
 log.dir=logs
-logging.level.root=info
+logging.level.com.muggle.poseidon.oa=debug
+
+oa.key="www.muggle.javaboy.org"
+
