害，写的还行

--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -36,6 +36,8 @@ logging.config=classpath:poseidon-logback.xml
 #spring.mvc.view.suffix=.html
 #spring.mvc.view.prefix=pear/
 
+poseidon.static-path=/**/*.*
+
 poseidon.auto=true
 log.dir=logs
 logging.level.com.muggle.poseidon.oa=debug
