--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -37,7 +37,7 @@ logging.config=classpath:poseidon-logback.xml
 #spring.mvc.view.prefix=pear/
 
 poseidon.static-path=/**/*.*
-
+poseidon.ignore-path=/**
 poseidon.auto=true
 log.dir=logs
 logging.level.com.muggle.poseidon.oa=debug
