--- a/poseidon-core/src/main/resources/application.properties
+++ b/poseidon-core/src/main/resources/application.properties
@@ -40,7 +40,7 @@ poseidon.static-path=/**/*.*
 poseidon.ignore-path=/**
 poseidon.auto=true
 log.dir=logs
-logging.level.com.muggle.poseidon.oa=debug
+logging.level.com.muggle=debug
 
 oa.key="www.muggle.javaboy.org"
 spring.profiles.include=refresh
