--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -42,6 +42,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>ding-sdk</artifactId>
+            <version>1</version>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
