--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -41,11 +41,11 @@
 
     <dependencies>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>ding-sdk</artifactId>
             <version>1</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>mysql</groupId>
