--- a/poseidon-core/src/main/resources/application-local.properties
+++ b/poseidon-core/src/main/resources/application-local.properties
@@ -9,13 +9,13 @@ spring.datasource.platform=mysql
 ## sql 脚本的位置，默认为 classpath:sql/migration。可手动指定
 spring.flyway.locations=classpath:sql
 ##  指定数据源，如果没有指定的话，将使用配置的主数据源
-spring.flyway.url=jdbc:mysql://127.0.0.1:3306/base_db_flyway?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+spring.flyway.url=jdbc:mysql:///p_oa?characterEncoding=UTF-8&serverTimezone=UTC
 ## Flyway 管理的 Schema 列表，区分大小写。默认连接对应的默认 Schema
 ## 如果这里明确指定了库名，那么在 spring.flyway.url 连接中指定的库名将无效
-spring.flyway.schemas=base_db_flyway
+spring.flyway.schemas=p_oa
 ## 用户名
 spring.flyway.user=root
 ## 密码
-spring.flyway.password=123456
+spring.flyway.password=root
 ## 开启，默认开启
 spring.flyway.enabled=true
