--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>flyway-core</artifactId>
             <version>5.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
+        </dependency>
     </dependencies>
 
 
