--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,45 @@
 server.port=9000
 poseidon.auto=true
 spring.flyway.locations=classpath:sql
-spring.flyway.enabled=true
+spring.flyway.enabled=false
+
+mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
+mybatis-plus.type-aliases-package=com.muggle.common
+mybatis-plus.global-config.id-type=0
+mybatis-plus.global-config.field-strategy=2
+mybatis-plus.global-config.capital-mode=true
+mybatis-plus.global-config.refresh-mapper=true
+logging.level.com.alibaba.nacos.client.naming=warn
+
+
+spring.datasource.url=jdbc:mysql:///p_oa?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.platform=mysql
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=1
+spring.datasource.minIdle=3
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=30000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat,slf4j
+#spring.datasource.useGlobalDataSourceStat: true
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
+
+logging.config=classpath:poseidon-logback.xml
+
+#spring.mvc.view.suffix=.html
+#spring.mvc.view.prefix=pear/
+
+poseidon.static-path=/**/*.*
+#poseidon.ignore-path=/**
+log.dir=logs
