--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,6 @@ logging.config=classpath:poseidon-logback.xml
 poseidon.static-path=/**/*.*
 #poseidon.ignore-path=/**
 log.dir=logs
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
