--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
             <version>1.0.0.SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
