--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=9000
 poseidon.auto=true
 spring.flyway.locations=classpath:sql
 spring.flyway.enabled=false
+spring.application.name=poseidon
 
 mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
 mybatis-plus.type-aliases-package=com.muggle.common
