--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.muggle</groupId>
             <artifactId>poseidon-boot-starter</artifactId>
-            <version>1.0.0.SNAPSHOT</version>
+            <version>1.0.0.Beta</version>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
