--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ logging.config=classpath:poseidon-logback.xml
 #spring.mvc.view.prefix=pear/
 
 poseidon.static-path=/**/*.*
-poseidon.ignore-path=/**
+#poseidon.ignore-path=/**
 log.dir=logs
 
 spring.redis.host=127.0.0.1
