--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ spring.redis.port=6379
 #logging.level.root=debug
 spring.profiles.include=refresh
 logging.level.com.muggle.poseidon.mapper=debug
+
+#server.servlet.context-path=/dev-api
