--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9000
 poseidon.auto=true
 spring.flyway.locations=classpath:sql
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.application.name=poseidon
 
 mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
@@ -11,9 +11,9 @@ mybatis-plus.global-config.field-strategy=2
 mybatis-plus.global-config.capital-mode=true
 mybatis-plus.global-config.refresh-mapper=true
 logging.level.com.alibaba.nacos.client.naming=warn
+spring.application.
 
-
-spring.datasource.url=jdbc:mysql:///p_oa?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/p_oa?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -43,6 +43,7 @@ logging.config=classpath:poseidon-logback.xml
 #spring.mvc.view.prefix=pear/
 
 poseidon.static-path=/**/*.*
+
 #poseidon.ignore-path=/**
 log.dir=logs
 
