--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=9000
 poseidon.auto=true
 spring.flyway.locations=classpath:sql
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.application.name=poseidon
 
 mybatis-plus.mapper-locations=classpath*:mapper/**/*.xml
-mybatis-plus.type-aliases-package=com.muggle.common
+mybatis-plus.type-aliases-package=com.sofia.poseidon
 mybatis-plus.global-config.id-type=0
 mybatis-plus.global-config.field-strategy=2
 mybatis-plus.global-config.capital-mode=true
@@ -32,7 +32,7 @@ spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,slf4j
-# ºÏ²¢¶à¸öDruidDataSourceµÄ¼à¿ØÊý¾Ý
+# ï¿½Ï²ï¿½ï¿½ï¿½ï¿½DruidDataSourceï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #spring.datasource.useGlobalDataSourceStat: true
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 
@@ -50,6 +50,6 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 #logging.level.root=debug
 spring.profiles.include=refresh
-logging.level.com.muggle.poseidon.mapper=debug
+logging.level.com.sofia.poseidon.mapper=debug
 
 #server.servlet.context-path=/dev-api
