feat(develop): 芜湖

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ logging.config=classpath:poseidon-logback.xml
 #spring.mvc.view.suffix=.html
 #spring.mvc.view.prefix=pear/
 
-poseidon.static-path=/**/*.*
+poseidon.static-path=/**/*.json,/**/*.txt
 #poseidon.ignore-path=/**
 log.dir=logs
 
